Refactor services section in index.html

--- a/index.html
+++ b/index.html
@@ -54,43 +54,52 @@
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="container section">
-      <h3>Services</h3>
-      <div class="cards">
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1518609883303-48f3f1a4d1b8?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=2b7f1b0293e4b2d4b6a8a8bdc2d9ed31" alt="website icon">
-          <h4>Custom Website</h4>
-          <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
-          <ul>
-            <li>Home, Services, About, Contact, Privacy</li>
-            <li>WhatsApp & click-to-call</li>
-            <li>Connected to Google Business</li>
-          </ul>
-        </article>
+<section id="services" class="container section">
+  <h3>Services</h3>
+  <div class="cards">
+    <article class="card">
+      <img
+        src="https://images.unsplash.com/photo-1518609883303-48f3f1a4d1b8?q=80&w=1200&auto=format&fit=crop"
+        alt="Website development"
+      >
+      <h4>Custom Website</h4>
+      <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
+      <ul>
+        <li>Home, Services, About, Contact, Privacy</li>
+        <li>WhatsApp & click-to-call</li>
+        <li>Connected to Google Business</li>
+      </ul>
+    </article>
 
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1532619187600-4a0b3d6dc7c0?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=8c5f9b9d8e5b7a6d2a1f9b5a3b4c6d7a" alt="map icon">
-          <h4>Google Maps Optimization</h4>
-          <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
-          <ul>
-            <li>Business description & services</li>
-            <li>Photo upload guidance</li>
-            <li>Review monitoring (optional)</li>
-          </ul>
-        </article>
+    <article class="card">
+      <img
+        src="https://images.unsplash.com/photo-1532619187600-4a0b3d6dc7c0?q=80&w=1200&auto=format&fit=crop"
+        alt="Google Maps optimization"
+      >
+      <h4>Google Maps Optimization</h4>
+      <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
+      <ul>
+        <li>Business description & services</li>
+        <li>Photo upload guidance</li>
+        <li>Review monitoring (optional)</li>
+      </ul>
+    </article>
 
-        <article class="card">
-          <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=14d8f6b5dbb5f6f2c3a7b3d4e5f9a1c2" alt="maintenance icon">
-          <h4>Maintenance & Hosting</h4>
-          <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
-          <ul>
-            <li>Hosting + security updates</li>
-            <li>1–3 small edits/month</li>
-            <li>Backups and uptime checks</li>
-          </ul>
-        </article>
-      </div>
-    </section>
+    <article class="card">
+      <img
+        src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop"
+        alt="Website maintenance and hosting"
+      >
+      <h4>Maintenance & Hosting</h4>
+      <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
+      <ul>
+        <li>Hosting + security updates</li>
+        <li>1–3 small edits/month</li>
+        <li>Backups and uptime checks</li>
+      </ul>
+    </article>
+  </div>
+</section>
 
     <!-- PROCESS -->
     <section id="process" class="section light">
