--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="https://images.unsplash.com/photo-1518609883303-48f3f1a4d1b8?q=80&w=1200&auto=format&fit=crop" alt="Website development">
+      <img src="https://images.unsplash.com/photo-1518609883303-48f3f1a4d1b8?auto=format&fit=crop&w=1200&q=80" alt="Website development">
+
       <h4>Custom Website</h4>
       <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
       <ul>
@@ -69,7 +70,8 @@
     </article>
 
     <article class="card">
-      <img src="https://images.unsplash.com/photo-1532619187600-4a0b3d6dc7c0?q=80&w=1200&auto=format&fit=crop" alt="Google Maps optimization">
+      <img src="https://images.unsplash.com/photo-1532619187600-4a0b3d6dc7c0?auto=format&fit=crop&w=1200&q=80" alt="Google Maps optimization">
+
       <h4>Google Maps Optimization</h4>
       <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
       <ul>
@@ -80,7 +82,8 @@
     </article>
 
     <article class="card">
-     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?q=80&w=1200&auto=format&fit=crop" alt="Website maintenance and hosting">
+     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1200&q=80" alt="Website maintenance and hosting">
+
       <h4>Maintenance & Hosting</h4>
       <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
       <ul>
