--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </article>
 
     <article class="card">
-     <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1200&q=80" alt="Website maintenance and hosting">
+     <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Website maintenance and hosting">
 
       <h4>Maintenance & Hosting</h4>
       <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
