Change image URLs for service cards in index.html
Updated image sources for website development and Google Maps optimization services.

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="https://images.unsplash.com/photo-1518609883303-48f3f1a4d1b8?auto=format&fit=crop&w=1200&q=80" alt="Website development">
+      <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Website development">
 
       <h4>Custom Website</h4>
       <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
@@ -70,7 +70,7 @@
     </article>
 
     <article class="card">
-      <img src="https://images.unsplash.com/photo-1532619187600-4a0b3d6dc7c0?auto=format&fit=crop&w=1200&q=80" alt="Google Maps optimization">
+      <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Google Maps optimization">
 
       <h4>Google Maps Optimization</h4>
       <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
