Replace image source with local asset

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Website development">
+      <img src="assets/image1.jpg" alt="Description">
+
 
       <h4>Custom Website</h4>
       <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
