Update service image in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="assets/image1.jpg" alt="Description">
+      <img src="assets/epstein.png" alt="Description">
 
 
       <h4>Custom Website</h4>
