Replace images in services section with new assets

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="assets/epstein.png" alt="Description">
+      <img src="assets/epstein2.jpeg" alt="Description">
 
 
       <h4>Custom Website</h4>
@@ -71,7 +71,7 @@
     </article>
 
     <article class="card">
-      <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Google Maps optimization">
+      <img src="assets/epstein2.jpeg" alt="Description">
 
       <h4>Google Maps Optimization</h4>
       <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
@@ -83,7 +83,7 @@
     </article>
 
     <article class="card">
-     <img src="https://www.google.com/url?sa=t&source=web&rct=j&url=https%3A%2F%2Fabcnews.go.com%2FUS%2Ffinal-batch-jeffrey-epstein-documents-released%2Fstory%3Fid%3D106227037&ved=0CBYQjRxqFwoTCID9n4inwpIDFQAAAAAdAAAAABAI&opi=89978449" alt="Website maintenance and hosting">
+     <img src="assets/epstein2.jpeg" alt="Description">
 
       <h4>Maintenance & Hosting</h4>
       <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
