--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   <h3>Services</h3>
   <div class="cards">
     <article class="card">
-      <img src="assets/epstein2.jpeg" alt="Description">
+      <img src="assets2/epstein2.jpeg" alt="Description">
 
 
       <h4>Custom Website</h4>
@@ -71,7 +71,7 @@
     </article>
 
     <article class="card">
-      <img src="assets/epstein2.jpeg" alt="Description">
+      <img src="assets2/epstein2.jpeg" alt="Description">
 
       <h4>Google Maps Optimization</h4>
       <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
@@ -83,7 +83,7 @@
     </article>
 
     <article class="card">
-     <img src="assets/epstein2.jpeg" alt="Description">
+     <img src="assets2/epstein2.jpeg" alt="Description">
 
       <h4>Maintenance & Hosting</h4>
       <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
