--- a/index.html
+++ b/index.html
@@ -2,206 +2,145 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>FV Web Development — Local Websites & Google Maps for Rome</title>
-  <meta name="description" content="FV Web Development — professional websites, Google Business optimization and WhatsApp integration for local businesses in Rome." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>FV Web Development | Websites + Google Maps Optimization (Rome)</title>
+  <meta name="description" content="FV Web Development builds fast, professional websites for local businesses in Rome and improves Google Maps presence to generate more contacts." />
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3EFV%3C/text%3E%3C/svg%3E">
   <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" href="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=64&auto=format&fit=crop&ixlib=rb-4.0.3&s=7b78f04fb1b2c6f3c7b68d3ed7f8e2c4" />
 </head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <div class="brand">
-        <img src="https://images.unsplash.com/photo-1515879218367-8466d910aaa4?q=80&w=120&auto=format&fit=crop&ixlib=rb-4.0.3&s=6b6a7c0e6b6d3c5f3e8e1b8d8f3a1b55" alt="FV Web Development logo" class="logo">
-        <div>
-          <h1 class="site-title">FV Web Development</h1>
-          <p class="site-sub">Websites • Google Maps Optimization • WhatsApp Integration — Rome</p>
-        </div>
-      </div>
 
-      <nav class="nav">
-        <a href="#services">Services</a>
-        <a href="#process">Process</a>
-        <a href="#about">About</a>
-        <a href="#contact" class="cta">Contact</a>
-      </nav>
-    </div>
+<body>
+  <header class="site-header" id="top">
+    <nav class="nav">
+      <a class="brand" href="index.html" aria-label="FV Web Development Home">
+        <span class="brand-mark">FV</span>
+        <span class="brand-text">Web Development</span>
+      </a>
+
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
+      <div class="nav-links" data-nav>
+        <a href="services.html">Services</a>
+        <a href="contacts.html">Contacts</a>
+        <a class="nav-cta" href="contacts.html#contact-form">Get a Quote</a>
+      </div>
+    </nav>
   </header>
 
+  <!-- HERO -->
   <main>
-    <!-- HERO -->
-    <section class="hero">
-      <div class="container hero-grid">
-        <div class="hero-text">
-          <h2>Clear, fast websites that turn Google searches into paying customers.</h2>
-          <p>We build professional, mobile-first websites and optimize your Google Business Profile so local customers call, message on WhatsApp, or book. Designed for mechanics, clinics, gyms and small professional firms in Rome.</p>
-          <div class="hero-ctas">
-            <a class="btn primary" href="https://wa.me/393330000000">Message on WhatsApp</a>
-            <a class="btn ghost" href="#services">See Services</a>
-          </div>
+    <section class="hero" aria-label="Hero">
+      <div class="hero-overlay"></div>
 
-          <ul class="benefits">
-            <li>Gets your business visible on Google Maps</li>
-            <li>WhatsApp click-to-chat and click-to-call set up</li>
-            <li>Single revision round — fast delivery</li>
+      <div class="hero-content container">
+        <h1 class="hero-title">FV Web Development</h1>
+        <p class="hero-subtitle">
+          Professional websites + Google Maps optimization for local businesses in Rome.
+          Clean design. Fast loading. Built to generate contacts.
+        </p>
+
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="services.html">Services</a>
+          <a class="btn btn-secondary" href="contacts.html">Contacts</a>
+        </div>
+
+        <div class="trust-row" role="list" aria-label="Trust points">
+          <div class="trust-chip" role="listitem">Mobile-first</div>
+          <div class="trust-chip" role="listitem">Fast + secure</div>
+          <div class="trust-chip" role="listitem">WhatsApp & call buttons</div>
+          <div class="trust-chip" role="listitem">Google Maps visibility</div>
+        </div>
+      </div>
+
+      <div class="scroll-hint" aria-hidden="true">
+        <span>Scroll</span>
+        <div class="scroll-line"></div>
+      </div>
+    </section>
+
+    <!-- VALUE SECTION -->
+    <section class="section container">
+      <div class="grid-2">
+        <div class="card">
+          <h2>What I do</h2>
+          <p>
+            I build modern websites that make your business look legitimate and make it easy for customers
+            to contact you. I also optimize your Google Maps profile so you convert more searches into calls.
+          </p>
+          <ul class="checklist">
+            <li>Clear services & pricing ranges (if you want)</li>
+            <li>Click-to-call + WhatsApp + contact forms</li>
+            <li>Google Maps integration & local SEO basics</li>
+            <li>Ongoing maintenance available</li>
           </ul>
+          <a class="link" href="services.html">See services →</a>
         </div>
 
-        <div class="hero-img">
-          <img src="https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=900&auto=format&fit=crop&ixlib=rb-4.0.3&s=7b78f04fb1b2c6f3c7b68d3ed7f8e2c4" alt="professional web design workspace">
-        </div>
-      </div>
-    </section>
+        <div class="card">
+          <h2>Who it’s for</h2>
+          <p>
+            Local businesses that want to look professional online and get more contacts:
+            clinics, mechanics/officine, gyms, barbers, consultants, and studios.
+          </p>
 
-    <!-- SERVICES -->
-<section id="services" class="container section">
-  <h3>Services</h3>
-  <div class="cards">
-    <article class="card">
-      <img src="assets2/epstein2.jpeg" alt="Description">
-
-
-      <h4>Custom Website</h4>
-      <p>Fast, mobile-first website with clear services, CTAs, and basic local SEO. One revision round included.</p>
-      <ul>
-        <li>Home, Services, About, Contact, Privacy</li>
-        <li>WhatsApp & click-to-call</li>
-        <li>Connected to Google Business</li>
-      </ul>
-    </article>
-
-    <article class="card">
-      <img src="assets2/epstein2.jpeg" alt="Description">
-
-      <h4>Google Maps Optimization</h4>
-      <p>Website link, services, photos, and consistent NAP so your Google Business listing converts more searches into calls.</p>
-      <ul>
-        <li>Business description & services</li>
-        <li>Photo upload guidance</li>
-        <li>Review monitoring (optional)</li>
-      </ul>
-    </article>
-
-    <article class="card">
-     <img src="assets2/epstein2.jpeg" alt="Description">
-
-      <h4>Maintenance & Hosting</h4>
-      <p>Hosting, updates, backups and small edits. Clear monthly plan with limits — no surprises.</p>
-      <ul>
-        <li>Hosting + security updates</li>
-        <li>1–3 small edits/month</li>
-        <li>Backups and uptime checks</li>
-      </ul>
-    </article>
-  </div>
-</section>
-
-    <!-- PROCESS -->
-    <section id="process" class="section light">
-      <div class="container">
-        <h3>Process — 5 steps</h3>
-        <ol class="process-list">
-          <li><strong>Audit</strong> — quick review of Google listing & competitors.</li>
-          <li><strong>Build</strong> — website, CTAs, WhatsApp integration.</li>
-          <li><strong>Optimize</strong> — add site to Google Business, photos, services.</li>
-          <li><strong>Launch</strong> — test mobile & performance, go live.</li>
-          <li><strong>Maintain</strong> — monthly plan available for updates and backups.</li>
-        </ol>
-      </div>
-    </section>
-
-    <!-- ABOUT -->
-    <section id="about" class="container section">
-      <h3>About FV Web Development</h3>
-      <div class="about-grid">
-        <div class="about-text">
-          <p>FV Web Development builds simple, conversion-focused websites and optimizes Google Business listings for local businesses in Rome. We value clarity, reliability, and measurable outcomes. We deliver fast and keep scope tight — one revision round per project, clear payment terms, and professional handover.</p>
-          <p><strong>Typical clients:</strong> Mechanics, clinics, gyms, barbers, consultants.</p>
-        </div>
-        <div class="about-img">
-          <img src="https://images.unsplash.com/photo-1524758631624-e2822e304c36?q=80&w=900&auto=format&fit=crop&ixlib=rb-4.0.3&s=4f2b2d8e7a6f3c2d8b7b2d1f6a9e8c3d" alt="about image">
-        </div>
-      </div>
-    </section>
-
-    <!-- TESTIMONIALS (placeholder) -->
-    <section class="section dark">
-      <div class="container">
-        <h3>What business owners say</h3>
-        <div class="testimonials">
-          <blockquote>
-            “Clear, fast and professional. We started getting more calls within two weeks.”<br>
-            <cite>— Local Mechanic, Rome</cite>
-          </blockquote>
-          <blockquote>
-            “He fixed our Google listing and added WhatsApp. Booking improved immediately.”<br>
-            <cite>— Gym Owner, Rome</cite>
-          </blockquote>
-        </div>
-      </div>
-    </section>
-
-    <!-- CONTACT -->
-    <section id="contact" class="container section">
-      <h3>Contact</h3>
-      <div class="contact-grid">
-        <div class="contact-card">
-          <h4>Start now</h4>
-          <p>Quickest way: WhatsApp message. Expect a short audit within 24–48 hours.</p>
-          <p><strong>WhatsApp:</strong> <a href="https://wa.me/393330000000">+39 333 000 0000</a></p>
-          <p><strong>Email:</strong> <a href="mailto:hello@fvwebdev.com">hello@fvwebdev.com</a></p>
-          <p><strong>Location:</strong> Rome, Italy</p>
-          <div class="contact-ctas">
-            <a class="btn primary" href="https://wa.me/393330000000">Message on WhatsApp</a>
-            <a class="btn ghost" href="mailto:hello@fvwebdev.com">Send email</a>
+          <div class="mini-gallery">
+            <figure class="mini">
+              <img
+                src="https://images.unsplash.com/photo-1486693128850-a77436e7ba3c?auto=format&fit=crop&w=900&q=60"
+                alt="Business workspace"
+                loading="lazy"
+              />
+              <figcaption>Professional presence</figcaption>
+            </figure>
+            <figure class="mini">
+              <img
+                src="https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=900&q=60"
+                alt="Team meeting"
+                loading="lazy"
+              />
+              <figcaption>Clear communication</figcaption>
+            </figure>
           </div>
-        </div>
 
-        <div class="form-card">
-          <h4>Send a request</h4>
-          <form id="contactForm" action="#" onsubmit="return handleForm(event)">
-            <label>
-              Business name
-              <input type="text" name="business" id="business" placeholder="e.g. Officina Rossi" required>
-            </label>
-
-            <label>
-              Your name
-              <input type="text" name="name" id="name" placeholder="Your name" required>
-            </label>
-
-            <label>
-              Phone or WhatsApp
-              <input type="tel" name="phone" id="phone" placeholder="+39 333 ..." required>
-            </label>
-
-            <label>
-              Message
-              <textarea name="message" id="message" rows="4" placeholder="Brief description of needs" required></textarea>
-            </label>
-
-            <div class="form-row">
-              <button type="submit" class="btn primary">Send request</button>
-              <a class="btn ghost" href="privacy.html" target="_blank">Privacy</a>
-            </div>
-
-            <p class="small">Form uses mailto fallback if JS is unavailable. Replace with backend endpoint to collect leads.</p>
-          </form>
+          <a class="link" href="contacts.html">Contact →</a>
         </div>
       </div>
     </section>
 
-    <footer class="site-footer">
-      <div class="container footer-inner">
-        <p>© <span id="year"></span> FV Web Development — Rome. <a href="privacy.html">Privacy / GDPR</a></p>
-        <nav class="footer-nav">
-          <a href="#services">Services</a>
-          <a href="#process">Process</a>
-          <a href="#contact">Contact</a>
-        </nav>
+    <!-- CTA STRIP -->
+    <section class="cta-strip">
+      <div class="container cta-strip-inner">
+        <div>
+          <h2>Want a website that actually brings contacts?</h2>
+          <p>Message me on WhatsApp or request a quote. Simple process. Clear pricing.</p>
+        </div>
+        <div class="cta-strip-actions">
+          <a class="btn btn-primary" href="contacts.html#whatsapp">Message on WhatsApp</a>
+          <a class="btn btn-secondary" href="contacts.html#contact-form">Request a Quote</a>
+        </div>
       </div>
-    </footer>
+    </section>
   </main>
+
+  <footer class="footer">
+    <div class="container footer-inner">
+      <div>
+        <div class="footer-brand">FV Web Development</div>
+        <div class="footer-small">Rome, Italy</div>
+      </div>
+      <div class="footer-links">
+        <a href="services.html">Services</a>
+        <a href="contacts.html">Contacts</a>
+        <a href="#top">Back to top</a>
+      </div>
+      <div class="footer-small">
+        © <span id="year"></span> FV Web Development. All rights reserved.
+      </div>
+    </div>
+  </footer>
 
   <script src="script.js"></script>
 </body>
