Revise index.html for SEO and clarity improvements
Updated title and meta description for better clarity and SEO. Enhanced hero section with clearer messaging and calls to action.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FV Web Development | Websites + Google Maps Optimization (Rome)</title>
-  <meta name="description" content="FV Web Development builds fast, professional websites for local businesses in Rome and improves Google Maps presence to generate more contacts." />
+  <title>FV Web Development | Websites + Google Maps that bring calls</title>
+  <meta name="description" content="FV Web Development builds fast websites and optimizes Google Maps so local businesses in Rome get more calls and WhatsApp messages." />
   <meta name="robots" content="index, follow" />
   <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3EFV%3C/text%3E%3C/svg%3E">
   <link rel="stylesheet" href="styles.css" />
@@ -30,28 +30,69 @@
     </nav>
   </header>
 
-  <!-- HERO -->
   <main>
-    <section class="hero" aria-label="Hero">
+    <!-- HERO (built for <3 seconds clarity) -->
+    <section class="hero hero-split" aria-label="Hero">
       <div class="hero-overlay"></div>
 
-      <div class="hero-content container">
-        <h1 class="hero-title">FV Web Development</h1>
-        <p class="hero-subtitle">
-          Professional websites + Google Maps optimization for local businesses in Rome.
-          Clean design. Fast loading. Built to generate contacts.
-        </p>
+      <div class="container hero-grid">
+        <!-- LEFT: Primer + Headline + Subhead + CTA -->
+        <div class="hero-copy">
+          <div class="primer">Websites + Google Maps for local businesses in Rome</div>
 
-        <div class="hero-actions">
-          <a class="btn btn-primary" href="services.html">Services</a>
-          <a class="btn btn-secondary" href="contacts.html">Contacts</a>
+          <!-- Headline: 10 words or less, outcome first -->
+          <h1 class="hero-title">Turn searches into calls.</h1>
+
+          <!-- Subhead: job/outcome, not fluff -->
+          <p class="hero-subtitle">
+            I build fast, professional websites and optimize your Google Maps profile so customers
+            contact you via call and WhatsApp.
+          </p>
+
+          <!-- Clear CTA above the fold (one primary) -->
+          <div class="hero-actions">
+            <a class="btn btn-primary" href="contacts.html#whatsapp">Message on WhatsApp</a>
+            <a class="btn btn-secondary" href="services.html">See Services</a>
+          </div>
+
+          <div class="trust-row" role="list" aria-label="Trust points">
+            <div class="trust-chip" role="listitem">Mobile-first</div>
+            <div class="trust-chip" role="listitem">Fast loading</div>
+            <div class="trust-chip" role="listitem">Clear CTA design</div>
+            <div class="trust-chip" role="listitem">Google Maps optimized</div>
+          </div>
         </div>
 
-        <div class="trust-row" role="list" aria-label="Trust points">
-          <div class="trust-chip" role="listitem">Mobile-first</div>
-          <div class="trust-chip" role="listitem">Fast + secure</div>
-          <div class="trust-chip" role="listitem">WhatsApp & call buttons</div>
-          <div class="trust-chip" role="listitem">Google Maps visibility</div>
+        <!-- RIGHT: “Real visual” (product-like preview) -->
+        <div class="hero-visual" aria-label="Website preview">
+          <div class="browser-mock">
+            <div class="browser-top">
+              <span class="dot"></span><span class="dot"></span><span class="dot"></span>
+              <span class="browser-url">fvwebdevelopment.it • preview</span>
+            </div>
+
+            <div class="browser-body">
+              <img
+                src="https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1600&q=70"
+                alt="Clean professional website preview"
+                loading="lazy"
+              />
+              <div class="overlay-badges">
+                <div class="badge">Click-to-call</div>
+                <div class="badge">WhatsApp</div>
+                <div class="badge">Services</div>
+              </div>
+            </div>
+          </div>
+
+          <div class="micro-proof">
+            <div class="micro-proof-title">What you get</div>
+            <ul class="micro-proof-list">
+              <li>Clear services + strong contact buttons</li>
+              <li>Google Maps listing connected to your site</li>
+              <li>Simple maintenance option (updates + fixes)</li>
+            </ul>
+          </div>
         </div>
       </div>
 
@@ -61,65 +102,72 @@
       </div>
     </section>
 
-    <!-- VALUE SECTION -->
+    <!-- Below-the-fold: keep it tight, no fluff -->
     <section class="section container">
       <div class="grid-2">
         <div class="card">
-          <h2>What I do</h2>
+          <h2>Services (simple)</h2>
           <p>
-            I build modern websites that make your business look legitimate and make it easy for customers
-            to contact you. I also optimize your Google Maps profile so you convert more searches into calls.
+            If customers are already searching you on Google, your website and Maps listing must
+            make them trust you and contact you.
           </p>
           <ul class="checklist">
-            <li>Clear services & pricing ranges (if you want)</li>
-            <li>Click-to-call + WhatsApp + contact forms</li>
-            <li>Google Maps integration & local SEO basics</li>
-            <li>Ongoing maintenance available</li>
+            <li>Website creation (fast, professional, mobile-first)</li>
+            <li>Google Business Profile optimization</li>
+            <li>WhatsApp + call + form setup</li>
+            <li>Monthly maintenance (optional)</li>
           </ul>
-          <a class="link" href="services.html">See services →</a>
+          <a class="link" href="services.html">See the full service list →</a>
         </div>
 
         <div class="card">
-          <h2>Who it’s for</h2>
-          <p>
-            Local businesses that want to look professional online and get more contacts:
-            clinics, mechanics/officine, gyms, barbers, consultants, and studios.
-          </p>
-
-          <div class="mini-gallery">
-            <figure class="mini">
-              <img
-                src="https://images.unsplash.com/photo-1486693128850-a77436e7ba3c?auto=format&fit=crop&w=900&q=60"
-                alt="Business workspace"
-                loading="lazy"
-              />
-              <figcaption>Professional presence</figcaption>
-            </figure>
-            <figure class="mini">
-              <img
-                src="https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=900&q=60"
-                alt="Team meeting"
-                loading="lazy"
-              />
-              <figcaption>Clear communication</figcaption>
-            </figure>
+          <h2>Process</h2>
+          <ol class="steps">
+            <li><strong>Audit:</strong> what’s missing on your site/Maps</li>
+            <li><strong>Build:</strong> structure + copy focused on conversions</li>
+            <li><strong>Connect:</strong> WhatsApp/calls/forms + Maps</li>
+            <li><strong>Launch:</strong> test everything, then publish</li>
+            <li><strong>Maintain:</strong> optional monthly updates</li>
+          </ol>
+          <div class="inline-actions">
+            <a class="btn btn-primary" href="contacts.html#contact-form">Request a Quote</a>
+            <a class="btn btn-secondary" href="contacts.html#whatsapp">WhatsApp</a>
           </div>
-
-          <a class="link" href="contacts.html">Contact →</a>
         </div>
       </div>
     </section>
 
-    <!-- CTA STRIP -->
+    <!-- FAQ (reduces friction / objections) -->
+    <section class="section container">
+      <div class="card">
+        <h2>FAQ</h2>
+        <div class="faq">
+          <details>
+            <summary>Can I edit the site later?</summary>
+            <p>Yes. I can give you editor access, while I keep admin control to avoid breaking changes.</p>
+          </details>
+          <details>
+            <summary>Do you add the website to Google Maps?</summary>
+            <p>Yes—either you add me as a manager on your Google Business Profile, or I guide you step-by-step.</p>
+          </details>
+          <details>
+            <summary>Do you guarantee results?</summary>
+            <p>No. What I guarantee is clean execution: speed, clarity, and a contact-focused setup that improves conversion.</p>
+          </details>
+        </div>
+      </div>
+    </section>
+
+    <!-- Final CTA (one primary action) -->
     <section class="cta-strip">
       <div class="container cta-strip-inner">
         <div>
-          <h2>Want a website that actually brings contacts?</h2>
-          <p>Message me on WhatsApp or request a quote. Simple process. Clear pricing.</p>
+          <h2>Want more calls from Google?</h2>
+          <p>Send a WhatsApp message. I’ll ask 3 questions and tell you the next step.</p>
         </div>
         <div class="cta-strip-actions">
           <a class="btn btn-primary" href="contacts.html#whatsapp">Message on WhatsApp</a>
-          <a class="btn btn-secondary" href="contacts.html#contact-form">Request a Quote</a>
+          <a class="btn btn-secondary" href="services.html">Services</a>
         </div>
       </div>
     </section>
