Update service description for clarity and impact

--- a/services.html
+++ b/services.html
@@ -34,8 +34,8 @@
       <div class="container">
         <h1>Services</h1>
         <p class="lead">
-          Clear deliverables. Professional execution. Built to convert searches into calls and messages.
-        </p>
+  Clear outcomes, not fluff: make customers trust you and contact you.
+</p>
       </div>
     </section>
 
