--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FV Web Development | Websites + Google Maps that bring calls</title>
-  <meta name="description" content="FV Web Development builds fast websites and optimizes Google Maps so local businesses in Rome get more calls and WhatsApp messages." />
-  <meta name="robots" content="index, follow" />
-  <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ctext y='.9em' font-size='90'%3EFV%3C/text%3E%3C/svg%3E">
+  <title>FV Web Development | Rome</title>
+  <meta name="description" content="Minimal, professional websites and online presence for local businesses in Rome." />
   <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-  <header class="site-header" id="top">
-    <nav class="nav">
+  <header class="header" id="top">
+    <nav class="nav container">
       <a class="brand" href="index.html" aria-label="FV Web Development Home">
         <span class="brand-mark">FV</span>
-        <span class="brand-text">Web Development</span>
+        <span class="brand-name">FV Web Development</span>
       </a>
 
       <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
@@ -23,151 +20,24 @@
       </button>
 
       <div class="nav-links" data-nav>
+        <a class="active" href="index.html">Home</a>
         <a href="services.html">Services</a>
         <a href="contacts.html">Contacts</a>
-        <a class="nav-cta" href="contacts.html#contact-form">Get a Quote</a>
       </div>
     </nav>
   </header>
 
   <main>
-    <!-- HERO (built for <3 seconds clarity) -->
-    <section class="hero hero-split" aria-label="Hero">
+    <section class="hero" aria-label="Hero">
       <div class="hero-overlay"></div>
 
-      <div class="container hero-grid">
-        <!-- LEFT: Primer + Headline + Subhead + CTA -->
-        <div class="hero-copy">
-          <div class="primer">Websites + Google Maps for local businesses in Rome</div>
+      <div class="hero-content container">
+        <h1 class="hero-title">FV Web Development</h1>
+        <p class="hero-subtitle">Professional websites and online presence for local businesses.</p>
 
-          <!-- Headline: 10 words or less, outcome first -->
-          <h1 class="hero-title">Turn searches into calls.</h1>
-
-          <!-- Subhead: job/outcome, not fluff -->
-          <p class="hero-subtitle">
-            I build fast, professional websites and optimize your Google Maps profile so customers
-            contact you via call and WhatsApp.
-          </p>
-
-          <!-- Clear CTA above the fold (one primary) -->
-          <div class="hero-actions">
-            <a class="btn btn-primary" href="contacts.html#whatsapp">Message on WhatsApp</a>
-            <a class="btn btn-secondary" href="services.html">See Services</a>
-          </div>
-
-          <div class="trust-row" role="list" aria-label="Trust points">
-            <div class="trust-chip" role="listitem">Mobile-first</div>
-            <div class="trust-chip" role="listitem">Fast loading</div>
-            <div class="trust-chip" role="listitem">Clear CTA design</div>
-            <div class="trust-chip" role="listitem">Google Maps optimized</div>
-          </div>
-        </div>
-
-        <!-- RIGHT: “Real visual” (product-like preview) -->
-        <div class="hero-visual" aria-label="Website preview">
-          <div class="browser-mock">
-            <div class="browser-top">
-              <span class="dot"></span><span class="dot"></span><span class="dot"></span>
-              <span class="browser-url">fvwebdevelopment.it • preview</span>
-            </div>
-
-            <div class="browser-body">
-              <img
-                src="https://images.unsplash.com/photo-1556761175-4b46a572b786?auto=format&fit=crop&w=1600&q=70"
-                alt="Clean professional website preview"
-                loading="lazy"
-              />
-              <div class="overlay-badges">
-                <div class="badge">Click-to-call</div>
-                <div class="badge">WhatsApp</div>
-                <div class="badge">Services</div>
-              </div>
-            </div>
-          </div>
-
-          <div class="micro-proof">
-            <div class="micro-proof-title">What you get</div>
-            <ul class="micro-proof-list">
-              <li>Clear services + strong contact buttons</li>
-              <li>Google Maps listing connected to your site</li>
-              <li>Simple maintenance option (updates + fixes)</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-
-      <div class="scroll-hint" aria-hidden="true">
-        <span>Scroll</span>
-        <div class="scroll-line"></div>
-      </div>
-    </section>
-
-    <!-- Below-the-fold: keep it tight, no fluff -->
-    <section class="section container">
-      <div class="grid-2">
-        <div class="card">
-          <h2>Services (simple)</h2>
-          <p>
-            If customers are already searching you on Google, your website and Maps listing must
-            make them trust you and contact you.
-          </p>
-          <ul class="checklist">
-            <li>Website creation (fast, professional, mobile-first)</li>
-            <li>Google Business Profile optimization</li>
-            <li>WhatsApp + call + form setup</li>
-            <li>Monthly maintenance (optional)</li>
-          </ul>
-          <a class="link" href="services.html">See the full service list →</a>
-        </div>
-
-        <div class="card">
-          <h2>Process</h2>
-          <ol class="steps">
-            <li><strong>Audit:</strong> what’s missing on your site/Maps</li>
-            <li><strong>Build:</strong> structure + copy focused on conversions</li>
-            <li><strong>Connect:</strong> WhatsApp/calls/forms + Maps</li>
-            <li><strong>Launch:</strong> test everything, then publish</li>
-            <li><strong>Maintain:</strong> optional monthly updates</li>
-          </ol>
-          <div class="inline-actions">
-            <a class="btn btn-primary" href="contacts.html#contact-form">Request a Quote</a>
-            <a class="btn btn-secondary" href="contacts.html#whatsapp">WhatsApp</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- FAQ (reduces friction / objections) -->
-    <section class="section container">
-      <div class="card">
-        <h2>FAQ</h2>
-        <div class="faq">
-          <details>
-            <summary>Can I edit the site later?</summary>
-            <p>Yes. I can give you editor access, while I keep admin control to avoid breaking changes.</p>
-          </details>
-          <details>
-            <summary>Do you add the website to Google Maps?</summary>
-            <p>Yes—either you add me as a manager on your Google Business Profile, or I guide you step-by-step.</p>
-          </details>
-          <details>
-            <summary>Do you guarantee results?</summary>
-            <p>No. What I guarantee is clean execution: speed, clarity, and a contact-focused setup that improves conversion.</p>
-          </details>
-        </div>
-      </div>
-    </section>
-
-    <!-- Final CTA (one primary action) -->
-    <section class="cta-strip">
-      <div class="container cta-strip-inner">
-        <div>
-          <h2>Want more calls from Google?</h2>
-          <p>Send a WhatsApp message. I’ll ask 3 questions and tell you the next step.</p>
-        </div>
-        <div class="cta-strip-actions">
-          <a class="btn btn-primary" href="contacts.html#whatsapp">Message on WhatsApp</a>
-          <a class="btn btn-secondary" href="services.html">Services</a>
+        <div class="hero-actions">
+          <a class="btn btn-primary" href="services.html">Services</a>
+          <a class="btn btn-secondary" href="contacts.html">Contacts</a>
         </div>
       </div>
     </section>
@@ -175,18 +45,16 @@
 
   <footer class="footer">
     <div class="container footer-inner">
-      <div>
+      <div class="footer-left">
         <div class="footer-brand">FV Web Development</div>
-        <div class="footer-small">Rome, Italy</div>
+        <div class="footer-meta">Rome, Italy</div>
       </div>
-      <div class="footer-links">
+      <div class="footer-right">
         <a href="services.html">Services</a>
         <a href="contacts.html">Contacts</a>
-        <a href="#top">Back to top</a>
+        <a href="#top">Top</a>
       </div>
-      <div class="footer-small">
-        © <span id="year"></span> FV Web Development. All rights reserved.
-      </div>
+      <div class="footer-meta">© <span id="year"></span> FV Web Development</div>
     </div>
   </footer>
 
